--- a/ConferenceManagementApp/MainWindow.xaml
+++ b/ConferenceManagementApp/MainWindow.xaml
@@ -7,70 +7,86 @@
         mc:Ignorable="d"   
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <TabControl Background="#FFDC3333">
-            <!-- Tab for adding/editing conferences -->
-            <TabItem Header="Конференция">
-                <StackPanel>
-                    <TextBox x:Name="conferenceNameTextBox" Width="300" Height="69" Text="Название конференции"/>
-                    <DatePicker x:Name="conferenceDatePicker" Margin="10" Width="300" Height="80"/>
-                    <TextBox x:Name="conferenceLocationTextBox" Margin="10" Width="300" Height="67" Text="Местопроведение конференции"/>
-                    <Button x:Name="saveConferenceButton" Content="Сохранить концеренцию" Click="SaveConferenceButton_Click" Margin="10" Width="300" Height="30"/>
-                    <Label x:Name="conferenceErrorLabel" Width="300"/>
-                </StackPanel>
-            </TabItem>
+    
+    <TabControl>
+        <TabControl.Resources>
+            <Style TargetType="TabItem">
+                <Setter Property="FontSize" Value="16"/>
+                <Setter Property="FontWeight" Value="Bold"/>
+                <Setter Property="Foreground" Value="#222"/>
+                <Setter Property="Background" Value="#EEE"/>
+            </Style>
+            <Style TargetType="TextBox">
+                <Setter Property="FontSize" Value="14"/>
+                <Setter Property="Margin" Value="10"/>
+                <Setter Property="Width" Value="300"/>
+                <Setter Property="Height" Value="30"/>
+            </Style>
+            <Style TargetType="ComboBox">
+                <Setter Property="FontSize" Value="14"/>
+                <Setter Property="Margin" Value="10"/>
+                <Setter Property="Width" Value="300"/>
+                <Setter Property="Height" Value="30"/>
+            </Style>
+            <Style TargetType="Button">
+                <Setter Property="FontSize" Value="14"/>
+                <Setter Property="Margin" Value="10"/>
+                <Setter Property="Width" Value="300"/>
+                <Setter Property="Height" Value="30"/>
+                <Setter Property="Background" Value="#4CAF50"/>
+                <Setter Property="Foreground" Value="White"/>
+            </Style>
+            <Style TargetType="Label">
+                <Setter Property="FontSize" Value="14"/>
+                <Setter Property="Foreground" Value="Red"/>
+            </Style>
+        </TabControl.Resources>
 
-            <!-- Tab for adding new participants -->
-            <TabItem Header="Ученые">
-                <StackPanel>
-                    <TextBox x:Name="fullNameTextBox" Margin="10" Width="300" Height="76" Text="ФИО ученного"/>
-                    <TextBox x:Name="countryTextBox" Margin="10" Width="300" Height="70" Text="Город" />
-                    <ComboBox x:Name="degreeComboBox" Margin="10" Width="300" Height="30" SelectedIndex="0">
-                        <ComboBoxItem Content="профессор"/>
-                        <ComboBoxItem Content="академик"/>
-                        <ComboBoxItem Content="доктор"/>
-                    </ComboBox>
-                    <Button x:Name="saveParticipantButton" Content="Сохранить ученного" Click="SaveParticipantButton_Click" Margin="10" Width="300" Height="30"/>
-                    <Label  x:Name="errorLabel" Width="300"/>
-                </StackPanel>
-            </TabItem>
+        <!-- Вкладка для добавления/редактирования конференций -->
+        
+        <TabItem Header="Конференция">
+            <StackPanel>
+                <TextBox x:Name="conferenceNameTextBox" Text="Название конференции"/>
+                <DatePicker x:Name="conferenceDatePicker"/>
+                <TextBox x:Name="conferenceLocationTextBox" Text="Местопроведение конференции"/>
+                <Button x:Name="saveConferenceButton" Content="Сохранить конференцию" Click="SaveConferenceButton_Click"/>
+                <Label x:Name="conferenceErrorLabel"/>
+            </StackPanel>
+        </TabItem>
 
-            <!-- Tab for searching conferences by participant -->
-            <TabItem Header="Поиск">
-                <StackPanel>
-                    <TextBox x:Name="fullNameSearchTextBox" Margin="10" Width="300" Height="79" Text="ФИО ученного"/>
-                    <Button x:Name="searchButton" Content="Поиск" Click="SearchButton_Click" Margin="10" Width="300" Height="30"/>
-                    <Label x:Name="searchErrorLabel"></Label>
-                    <DataGrid x:Name="searchResultsDataGrid" Margin="10" Height="300" AutoGenerateColumns="True"/>
-                </StackPanel>
-            </TabItem>
+        <!-- Вкладка для добавления новых участников -->
+        <TabItem Header="Ученые">
+            <StackPanel>
+                <TextBox x:Name="fullNameTextBox" Text="ФИО ученого"/>
+                <TextBox x:Name="countryTextBox" Text="Город"/>
+                <ComboBox x:Name="degreeComboBox" SelectedIndex="0">
+                    <ComboBoxItem Content="профессор"/>
+                    <ComboBoxItem Content="академик"/>
+                    <ComboBoxItem Content="доктор"/>
+                </ComboBox>
+                <Button x:Name="saveParticipantButton" Content="Сохранить ученого" Click="SaveParticipantButton_Click"/>
+                <Label x:Name="errorLabel"/>
+            </StackPanel>
+        </TabItem>
 
-            <!-- Tab for analyzing popularity of researchers -->
-            <TabItem Header="Анализ">
-                <StackPanel>
-                    <DataGrid x:Name="analysisResultsDataGrid" Margin="10" Height="385" AutoGenerateColumns="True"/>
-                </StackPanel>
-            </TabItem>
+        <!-- Вкладка для поиска конференций по участникам -->
+        <TabItem Header="Поиск">
+            <StackPanel>
+                <TextBox x:Name="fullNameSearchTextBox" Text="ФИО ученого"/>
+                <Button x:Name="searchButton" Content="Поиск" Click="SearchButton_Click"/>
+                <Label x:Name="searchErrorLabel"/>
+                <DataGrid x:Name="searchResultsDataGrid" Margin="10" Height="300" AutoGenerateColumns="True"/>
+            </StackPanel>
+        </TabItem>
 
-            <TabItem Header="Участники">
-                <StackPanel>
-                    <Grid Margin="10">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition/>
-                            <ColumnDefinition/>
-                        </Grid.ColumnDefinitions>
-                        <StackPanel Grid.Column="0">
-                            <TextBlock Text="Ученный" Margin="5"/>
-                            <ListBox x:Name="researchersListBox" Width="380" Height="250" DisplayMemberPath="FullName" Margin="5"/>
-                        </StackPanel>
-                        <StackPanel Grid.Column="1">
-                            <TextBlock Text="Конференция" Margin="5"/>
-                            <ListBox x:Name="conferencesListBox" Width="383" Height="250" DisplayMemberPath="Name"/>
-                        </StackPanel>
-                    </Grid>
-                    <TextBox x:Name="topicTextBox" Margin="10" Width="300" Height="30" Text="Тема"/>
-                    <Button Content="Добавить участие" Click="AddParticipationButton_Click" Margin="10" Width="300" Height="30" HorizontalAlignment="Center" VerticalAlignment="Bottom"/>
-                </StackPanel>
-            </TabItem>
-        </TabControl>
-    </Grid>
+        <!-- Вкладка для анализа популярности исследователей -->
+        <TabItem Header="Анализ">
+            <StackPanel>
+                <DataGrid x:Name="analysisResultsDataGrid" Margin="10" Height="385" AutoGenerateColumns="True"/>
+            </StackPanel>
+        </TabItem>
+
+       
+    </TabControl>
+</Grid>
 </Window>
